# Fullstack-AI-Chat

./: .gitignore  docker-compose.yml  example.env  readme.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
backend/: Dockerfile  alembic.ini  db.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: c66d00e68f7a_create_user_table.py
backend/config/: settings.py
backend/database/: db.py
backend/models/: auth.py
backend/repositories/: base.py  users.py
backend/routers/: auth.py  chat.py
backend/schemas/: auth.py  chat.py
backend/services/: AIService.py  UserService.py  ai_service.py  auth_service.py  exceptions.py  user_service.py
backend/tests/: conftest.py  test_cors.py  test_user_service_session.py
backend/tests/repositories/: test_user_repository.py
backend/tests/services/: test_auth_service.py  test_user_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/app/: App.css  App.tsx  index.css
frontend/src/app/components/about-modal/: AboutModal.tsx  StreamDebug.tsx  debug.css
frontend/src/app/components/chat/: ChatBox.css  ChatBox.tsx  ChatInput.tsx  ChatMessage.tsx  ChatOutput.tsx  common.tsx  types.tsx
frontend/src/app/hooks/: useModalRoot.tsx
ollama/: run_ollama.sh
