[project]
name = "fastapi-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "bcrypt>=4.3.0",
    "chromadb>=1.4.1",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "fastapi-jwt>=0.3.0",
    "gradio>=6.5.1",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openai>=2.14.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "pypdf>=6.6.2",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "requests>=2.32.4",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "ruff>=0.11.12",
]
